--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="/build/main.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -41,9 +41,9 @@
     })();
   </script>
 </head>
-<body >
-  <div id="root"></div>
-  <!-- <script src="build/index.js" type="module" defer></script> -->
-  <script src="index.js" defer></script>
+<body class="bg-night text-sky font-sunflower font-light">
+  <div id="root" class="flex flex-col items-center"></div>
+  <!-- <script src="/build/index.js" type="module" defer></script> -->
+  <script src="/build/index.js" defer></script>
 </body>
 </html>
